Updating to Java 21!
- Records!
- simpler main method!
- lombok Builder works on Records
- JUnit 5 migration with ParameterizedTests
- updated Readme.md